# deep-ppt

./: .gitignore  README.md  pyproject.toml
.github/: README_DEV.md
src/deep_ppt/: __init__.py  cli.py
tests/: test_cli.py
